--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "hospital_api",
   "version": "1.0.0",
-  "description": "Backend_test3",
+  "description": "node js backend test",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
-  "author": "Kaustubha Lau",
+  "author": "Tushar",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "bson": "4.0.0" 
   }
 }
