--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "bson": "4.0.0" 
+    "passport-local": "^1.0.0"
   }
 }
