--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tushar",
   "license": "ISC",
   "dependencies": {
+    "bson": "^5.0.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
