--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "node js backend test",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "prod_start": "SET NODE_ENV=production & node index.js"
   },
   "author": "Tushar",
   "license": "ISC",
