--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "author": "Tushar",
   "license": "ISC",
   "dependencies": {
-    "bson": "^5.0.0",
-    "bcrypt": "^5.0.0",
+      "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "latest": "^0.2.0",
     "mongoose": "^5.9.29",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
